--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
+  --dark-blue: #141628;
+  --dark-pink: #fd4370;
+  --next-dark-blue: #1b1e52;
+  --text-color: #d1d5e8;
+}
+
+.bg-dark-blue{
+  background-color: var(--dark-blue);
 }
