Added form functionality to connect form

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -149,3 +149,6 @@
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
 }
+.padding-bottom{
+    padding-bottom: 10rem;
+}
