--- a/src/components/style.css
+++ b/src/components/style.css
@@ -24,6 +24,9 @@
     text-decoration: none;
     color: inherit;
 }
+.pointer{
+    cursor: pointer;
+}
 .a:hover{
     color: inherit;
 }
@@ -53,7 +56,7 @@
 }
 .selected-mobile{
     color: var(--text-color);
-    border-top: 2px solid var(--dark-pink);
+    border-top: 3px solid var(--dark-pink);
 }
 
 .hero-image{
