Added scroll => navbar functionality

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -66,7 +66,7 @@
 .text-box{
     margin-right: 1rem;
     left: 2rem;
-    position: absolute;
+    /* position: absolute; */
     z-index: 10;
 }
 
