--- a/src/components/style.css
+++ b/src/components/style.css
@@ -168,3 +168,11 @@
 .padding-bottom{
     padding-bottom: 10rem;
 }
+.About__image{
+    width: 100%;
+}
+@media screen and (min-width:768px){
+    .About__image{
+        width: 70%;
+    }
+}
